# de-ref-rs

./: Cargo.toml  README.md
src/: lib.rs
tests/: derive_deref.rs
